Tue May 15 06:28:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Big_Oneways/run_test.pl:
        * tests/CSD_Strategy_Tests/TP_Test_1/run_test.pl:
        * tests/DSI_AMH/run_test.pl:
        * tests/LongUpcalls/run_test.pl:
        * tests/Multiple/run_test.pl:
        * tests/ORT/run_test.pl:
        * tests/Server_Connection_Purging/run_test.pl:
          Improvements for VxWorks cross platform testing

Mon May 14 16:32:59 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>

        * tao/Profile.cpp:
        * tao/Profile.h:
          Proper fix for the race condition in
          TAO_Profile::create_tagged_profile that was discussed
          in bug#2377.

Mon May 14 13:02:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DSI_Gateway/run_test.pl:
          Extended timeouts for slower systems

Mon May 14 11:39:08 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/IORManipulation/filter/Makefile.am:

          Use $(TAO_IDL) instead of $(ACE_ROOT)/bin/tao_idl for the
          dependency.

Mon May 14 10:21:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Acceptor.cpp:
        * tao/Strategies/COIOP_Acceptor.cpp:
        * tao/Strategies/DIOP_Acceptor.cpp:
        * tao/Strategies/SHMIOP_Acceptor.cpp:
        * tao/Strategies/UIOP_Acceptor.cpp:
          Fixed unreachable code warnings, fixes bugzilla 2929, thanks
          to Ossama for delivering the patch

Fri May 11 14:32:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/PluggableUDP/DIOP/README:
          Small updates to reflect current location of DIOP

Fri May 11 14:32:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * interop-tests/wchar/client.cpp:
        * interop-tests/wchar/server.cpp:
          Layout changes

Fri May 11 14:26:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp: